[gd_scene load_steps=15 format=2]

[ext_resource path="res://pictures/cow.png" type="Texture" id=1]
[ext_resource path="res://Scripts/player.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://sound/266105__marregheriti__shotgun.wav" type="AudioStream" id=4]
[ext_resource path="res://Scenes/UI/SlugCount.tscn" type="PackedScene" id=5]
[ext_resource path="res://sound/154934__klawykogut__empty-gun-shot.wav" type="AudioStream" id=6]
[ext_resource path="res://sound/200966__paul368__shotgun-cock-reload-layered-powerful.wav" type="AudioStream" id=7]
[ext_resource path="res://pictures/cow-walk.png" type="Texture" id=8]
[ext_resource path="res://pictures/cow-pump.png" type="Texture" id=9]
[ext_resource path="res://sound/Jump_04.wav" type="AudioStream" id=10]
[ext_resource path="res://Scenes/UI/PlayerHP.tscn" type="PackedScene" id=11]
[ext_resource path="res://sound/moo.wav" type="AudioStream" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 46.3935, 81.2914 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "still",
"speed": 1.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 9 ) ],
"loop": true,
"name": "pump",
"speed": 2.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 2 )
animation = "pump"

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource( 3 )

[node name="GunSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SlugCount" parent="." instance=ExtResource( 5 )]
position = Vector2( -450, -250 )
scale = Vector2( 0.8, 0.8 )

[node name="EmptyGun" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="ReloadGun" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="PlayerHP" parent="." instance=ExtResource( 11 )]
margin_left = 392.513
margin_top = -285.622
margin_right = 392.513
margin_bottom = -285.622

[node name="Invulnerability" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="Flash" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="MooSoud" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
[connection signal="finished" from="GunSound" to="." method="_on_GunSound_finished"]
[connection signal="finished" from="JumpSound" to="." method="_on_JumpSound_finished"]
[connection signal="timeout" from="Invulnerability" to="." method="_on_Invulnerability_timeout"]
[connection signal="timeout" from="Flash" to="." method="_on_Flash_timeout"]
